--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -1,28 +1,37 @@
-<h1>Sushi</h1>
-<img src="../images/sushi.webp" width="400">
-<h2>Description</h2>
-<h3>Ingredients</h3>
-<ul>
-    <li>1 cup uncooked short-grain white rice</li>
-    <li>1 cup water</li>
-    <li>¼ cup rice vinegar</li>
-    <li>1 tablespoon white sugar</li>
-    <li>½ cup imitation crabmeat, finely chopped</li>
-    <li>¼ cup mayonnaise</li>
-    <li>8 sheets nori (dry seaweed)</li>
-    <li>2 ½ tablespoons sesame seeds</li>
-    <li>1 cucumber, cut into thin spears</li>
-    <li>2 avocados - pitted, peeled, and sliced the long way</li>
-</ul>
-<h3>Steps</h3>
-<ol>
-    <li>the rice in several changes of water until the rinse water is no longer cloudy, drain well, and place in a covered pan or rice cooker with 1 cup water. Bring to a boil, reduce heat to a simmer, and cover the pan. Allow the rice to simmer until the top looks dry, about 15 minutes. Turn off the heat, and let stand for 10 minutes to absorb the rest of the water.</li>
-    <li>Mix the rice vinegar and sugar in a small bowl until the sugar has dissolved, and stir the mixture into the cooked rice until well combined. Allow the rice to cool, and set aside.</li>
-    <li>Mix the imitation crabmeat with mayonnaise in a bowl, and set aside. To roll the sushi, cover a bamboo rolling mat with plastic wrap. Lay a sheet of nori, shiny side down, on the plastic wrap. With wet fingers, firmly pat a thin, even layer of prepared rice over the nori, leaving 1/4 inch uncovered at the bottom edge of the sheet. Sprinkle the rice with about 1/2 teaspoon of sesame seeds, and gently press them into the rice. Carefully flip the nori sheet over so the seaweed side is up.</li>
-    <li>Place 2 or 3 long cucumber spears, 2 or 3 slices of avocado, and about 1 tablespoon of imitation crab mixture in a line across the nori sheet, about 1/4 from the uncovered edge. Pick up the edge of the bamboo rolling sheet, fold the bottom edge of the sheet up, enclosing the filling, and tightly roll the sushi into a cylinder about 1 1/2 inch in diameter. Once the sushi is rolled, wrap it in the mat and gently squeeze to compact it tightly.</li>
-    <li>Cut each roll into 1 inch pieces with a very sharp knife dipped in water. </li>
-</ol>
-<h3>References</h3>
-<ul>
-    <li><a href="https://www.allrecipes.com/recipe/189477/california-roll-sushi/">California Roll Sushi</a></li>
-</ul>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Odin Recipes</title>
+    </head>
+    <body>
+        <h1>Sushi</h1>
+        <img src="../images/sushi.webp" width="400">
+        <h2>Description</h2>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 cup uncooked short-grain white rice</li>
+            <li>1 cup water</li>
+            <li>¼ cup rice vinegar</li>
+            <li>1 tablespoon white sugar</li>
+            <li>½ cup imitation crabmeat, finely chopped</li>
+            <li>¼ cup mayonnaise</li>
+            <li>8 sheets nori (dry seaweed)</li>
+            <li>2 ½ tablespoons sesame seeds</li>
+            <li>1 cucumber, cut into thin spears</li>
+            <li>2 avocados - pitted, peeled, and sliced the long way</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>the rice in several changes of water until the rinse water is no longer cloudy, drain well, and place in a covered pan or rice cooker with 1 cup water. Bring to a boil, reduce heat to a simmer, and cover the pan. Allow the rice to simmer until the top looks dry, about 15 minutes. Turn off the heat, and let stand for 10 minutes to absorb the rest of the water.</li>
+            <li>Mix the rice vinegar and sugar in a small bowl until the sugar has dissolved, and stir the mixture into the cooked rice until well combined. Allow the rice to cool, and set aside.</li>
+            <li>Mix the imitation crabmeat with mayonnaise in a bowl, and set aside. To roll the sushi, cover a bamboo rolling mat with plastic wrap. Lay a sheet of nori, shiny side down, on the plastic wrap. With wet fingers, firmly pat a thin, even layer of prepared rice over the nori, leaving 1/4 inch uncovered at the bottom edge of the sheet. Sprinkle the rice with about 1/2 teaspoon of sesame seeds, and gently press them into the rice. Carefully flip the nori sheet over so the seaweed side is up.</li>
+            <li>Place 2 or 3 long cucumber spears, 2 or 3 slices of avocado, and about 1 tablespoon of imitation crab mixture in a line across the nori sheet, about 1/4 from the uncovered edge. Pick up the edge of the bamboo rolling sheet, fold the bottom edge of the sheet up, enclosing the filling, and tightly roll the sushi into a cylinder about 1 1/2 inch in diameter. Once the sushi is rolled, wrap it in the mat and gently squeeze to compact it tightly.</li>
+            <li>Cut each roll into 1 inch pieces with a very sharp knife dipped in water. </li>
+        </ol>
+        <h3>References</h3>
+        <ul>
+            <li><a href="https://www.allrecipes.com/recipe/189477/california-roll-sushi/">California Roll Sushi</a></li>
+        </ul>
+    </body>
+</html>
