--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes For Japan Food</h1>
         <ol>
             <li><a href="./recipes/sushi.html">Sushi</a></li>
+            <li><a href="./recipes/lamen.html">ラーメい</a></li>
         </ol>
     </body>
 </html>
