--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>ラーメい</h1>
-        <img src="../images/lamen.jpg" width="400">
+        <img src="../images/ramen.jpg" width="400">
         <h2>Description</h2>
         <h3>材料</h3>
         <ul>
