--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>ラーメい</h1>
-        <img src="../images/ramen.jpg" width="400">
+        <img src="../images/ramen.jpg">
         <div>
             <h2>Description</h2>
             <h3>材料</h3>
